deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "250m"
spec:
  rules:
    - http:
        paths:
          - path: /api/admin
            pathType: Prefix
            backend:
              service:
                name: translator-backend-graphql-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: translator-backend-service
                port: 
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port: 
                  number: 80
